--- a/singel&Multiplepermission/src/main/AndroidManifest.xml
+++ b/singel&Multiplepermission/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.arunavaghosh.singelMultiplePermission" >
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+   <!-- <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -18,7 +18,7 @@
     <uses-permission android:name="android.permission.ADD_VOICEMAIL"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.BODY_SENSORS"/>
+    <uses-permission android:name="android.permission.BODY_SENSORS"/>-->
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
